--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -1,1 +1,26 @@
-<p>first works!</p>
+<div class="form-container">
+    <h2>Simple Form</h2>
+    <form>
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" [(ngModel)]="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" id="email" [(ngModel)]="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message:</label>
+            <input type="text" id="message" [(ngModel)]="message" name="message" required>
+        </div>
+        <button type="submit"> Submit</button>
+    </form>
+
+    <div>
+        <h3>Form Date:</h3>
+        <p><strong>Name: {{ name }}</strong></p>
+        <p><strong>Email: {{ email }}</strong></p>
+        <p><strong>Message: {{ message }}</strong></p>
+    </div>
+
+</div>
