--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -27,12 +27,14 @@
     <table *ngIf="isSubmitted">
         <thead>
             <tr>
+                <th>NO:</th>
                 <th>Name</th>
                 <th>Email</th>
                 <th>Message</th>
             </tr>
         </thead>
-        <tr *ngFor="let msg of messages">
+        <tr *ngFor="let msg of messages;let i = index">
+            <td>{{ i + 1 }}</td>
             <td>{{ msg.name }}</td>
             <td>{{ msg.email }}</td>
             <td>{{ msg.message }}</td>
