--- a/src/app/components/first/first.component.scss
+++ b/src/app/components/first/first.component.scss
@@ -41,3 +41,10 @@ button[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
 }
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
