--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -45,6 +45,8 @@
         <app-message-details
             *ngFor="let msg of messages;let i = index"
             [message]="msg"
+            [index]="i"
+            (delete)="deleteMessage($event)"
         ></app-message-details>
        
     </div>
