--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="about-container">
     <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nostrum, quae error possimus dignissimos eius accusantium necessitatibus, eaque unde illo omnis accusamus porro doloremque minus, iusto ea tempora qui excepturi.</h2>
+    <h3>Hello parameter  ==> {{param}}</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
