--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,10 @@
 <div class="about-container">
-    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nostrum, quae error possimus dignissimos eius accusantium necessitatibus, eaque unde illo omnis accusamus porro doloremque minus, iusto ea tempora qui excepturi.</h2>
+    <h2>My name is Carlos and I had a computer shop in Etobicoke for almost 15 years from 1998 - 2012.</h2>
+    
     <h3>Hello parameter  ==> {{param}}</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sequi similique consequuntur. Voluptatibus ullam earum quibusdam amet vel aliquid, illum non animi sunt. Obcaecati animi, nostrum impedit nobis commodi amet.</p>
+    <h3>Hello parameter  ==> {{queryParam}}</h3>
+    
+    <p>Since I was a little kid I liked video games and although I had a Coleco Vision and an Atari 2600 my brain literally exploded when I first came across a Commodore VIC-20.  I begged my mom for one and then when I heard about the C-64 I just fell in love.</p>
+    <p>Video games were cool but editing or moding your video games was even cooler.  Changing the colour of pac-man from yellow to blue...  I mean, come on.  Then I bought my first PC.  Some sort of 386 Clone with 8MB of 30-PIN RAM and there were empty slots for more?  wow...</p>
+    <p>So it's been a long road...  from Asteroids to Starfield but I just love tech and breaking it and fixing it again.  It's hard to explain.</p>
 </div>
